src/pages/Dashboards/styles/Table.module.css
.thead {
    th {
        font-weight: 600;
        font-size: 0.65rem;
        padding: 0.6rem;
        min-width: 5rem;
        max-width: 10rem;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    tr {
        border-color: var(--mantine-color-gray-1);
    }

}

.tbody {
    tr {
        border-color: var(--mantine-color-gray-1);
    }

    td {
        padding: 0.4rem 0.6rem;
        min-width: 5rem;
        max-width: 10rem;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

.warningText {
    color: var(--mantine-color-gray-5);
    font-size: 0.75rem;
}

.warningIcon {
    color: var(--mantine-color-gray-5);
}

